--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,7 +1,11 @@
 .button {
   width: 100%;
+  cursor: pointer;
   font: inherit;
+  font-weight: bold;
   padding: var(--control-padding);
+
+  text-align: center;
 
   color: var(--inverted-copy-color);
 
@@ -13,7 +17,7 @@
 }
 
 .button:focus-visible {
-  outline: var(--border-thickness) solid cadetblue;
+  outline: var(--border-thickness) solid var(--control-focus-ring);
   outline-offset: 2px;
 }
 
