--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,5 +1,9 @@
 .container {
   height: 100%;
+  margin: 0 auto;
+  min-width: 245px;
+  max-width: 512px;
+
   display: flex;
   align-items: center;
   justify-content: flex-start;
